kleine unwichtige Anpassung im body

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Meine index.html für das Git-Projekt "Website"</h1>
     <br>und es geht los</br>
+    <br>und los</br>
+    <br>feuer frei</br>
 </body>
 </html>
