Austausch FW mit Polizei.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <br>und los</br>
     <br>feuer frei!</br>
     <br>Feuerwehr rufen.</br>
+    <br>Polizei soll das sein!</br>
 </body>
 </html>
