Start fuer Europa

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <br>und los</br>
     <br>feuer frei!</br>
     <br>Feuerwehr rufen.</br>
+    <br> Die Website wird jetzt auch für Europa erstellt.</br>
 </body>
 </html>
