Kleine Anpassung am Master

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <br>feuer frei!</br>
     <br>Feuerwehr rufen.</br>
     <br> Die Website wird jetzt auch für Europa erstellt.</br>
+    <br>Kleine Änderung im Master-Branch.</br>
 </body>
 </html>
