--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git Projekt - Website</title>
   </head>
   
-<body>
+<body style="background-color: rgb(200, 200, 200)">
     <h1>Meine index.html für das Git-Projekt "Website"</h1>
     <br>und es geht los</br>
     <br>und los</br>
