Link nach oben hinzugefuegt.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <br>Feuerwehr rufen.</br>
     <br> Die Website wird jetzt auch für Europa erstellt.</br>
     <br>Kleine Änderung im Master-Branch.</br>
+    <a href="#">Link nach oben springen</a>
 </body>
 </html>
