Mehr Inhalt hinzugefuegt.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <br>Feuerwehr rufen.</br>
     <br> Die Website wird jetzt auch für Europa erstellt.</br>
     <br>Kleine Änderung im Master-Branch.</br>
+    <br>Mehr Inhalt an gleicher Stelle wie Link i Master-Branch</br>
 </body>
 </html>
