--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <br>und los</br>
     <br>feuer frei!</br>
     <br>Feuerwehr rufen.</br>
-    <br> Die Website wird jetzt auch für Europa erstellt.</br>
-    <br>Kleine Änderung im Master-Branch.</br>
+    <br>Die Website wird jetzt auch für Europa erstellt.</br>
+    <br>Aus kleine wird keine Änderung im Master-Branch.</br>
     <br>Mehr Inhalt an gleicher Stelle wie Link im Master-Branch</br>
     <a href="#">Link nach oben springen</a>
 </body>
