--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>feuer frei!</br>
     <br>Feuerwehr rufen.</br>
     <br>Die Website wird jetzt auch für Europa erstellt.</br>
-    <br>Aus kleine wird keine Änderung im Master-Branch.</br>
+    <br style="color: red">Aus kleine wird keine Änderung im Master-Branch.</br>
     <br>Mehr Inhalt an gleicher Stelle wie Link im Master-Branch</br>
     <a href="#">Link nach oben springen</a>
 </body>
