--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <br style="color: red">Aus kleine wird keine Änderung im Master-Branch.</br>
     <br>Mehr Inhalt an gleicher Stelle wie Link im Master-Branch</br>
     <a href="#">Link nach oben springen</a>
-    <br>Neuer CONTENT es geht los</br>
+    <br>Neuer CONTENT es geht los, aber noch viel besser</br>
 </body>
 </html>
