Change BG Color zu gruen
Änderung BG Color zu gruen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git Projekt - Website</title>
   </head>
   
-<body style="background-color: rgb(111, 111, 111)">
+<body style="background-color: rgb(gruen, gruen, gruen)">
     <h1>Meine index.html für das Git-Projekt "Website"</h1>
     <br>und es geht los</br>
     <br>und los</br>
